@@ -319,10 +319,10 @@ samba_mkconf_cmd()
 				-o "recycle " \
 			-b \
 			-v "concat(aiomodule, ' ')" \
-			-i "count(//afp/enable) > 0" \
+			-i "count(afpcompat) > 0" \
 				-o "catia fruit " \
 			-b \
-			-i "count(storealternatedatastreams) > 0 or count(//afp/enable) > 0" \
+			-i "count(storealternatedatastreams) > 0 or count(afpcompat) > 0" \
 				-o "streams_xattr " \
 			-b \
 			-i "count(storentfsacls) > 0" \
@@ -353,7 +353,7 @@ samba_mkconf_cmd()
 			-i "count(zfsacl) > 0" \
 				-o "veto files = /.zfs/" -n \
 			-b \
-			-i "count(//afp/enable) > 0" \
+			-i "count(afpcomapt) > 0" \
 				-o "fruit:resource = file" -n \
 				-o "fruit:metadata = netatalk" -n \
 				-o "fruit:locking = netatalk" -n \
@@ -471,10 +471,10 @@ sambaad_mkconf_cmd()
 					-o "recycle " \
 				-b \
 				-v "concat(aiomodule, ' ')" \
-				-i "count(//afp/enable) > 0" \
+				-i "count(afpcompat) > 0" \
 					-o "catia fruit " \
 				-b \
-				-i "count(storealternatedatastreams) > 0 or count(//afp/enable) > 0" \
+				-i "count(storealternatedatastreams) > 0 or count(afpcompat) > 0" \
 					-o "streams_xattr " \
 				-b \
 				-i "count(storentfsacls) > 0" \
@@ -505,7 +505,7 @@ sambaad_mkconf_cmd()
 				-i "count(zfsacl) > 0" \
 					-o "veto files = /.zfs/" -n \
 				-b \
-				-i "count(//afp/enable) > 0" \
+				-i "count(afpcompat) > 0" \
 					-o "fruit:resource = file" -n \
 					-o "fruit:metadata = netatalk" -n \
 					-o "fruit:locking = netatalk" -n \
